--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-
----
-
-## requirements.txt
-```txt
-streamlit>=1.37.0
-pandas>=2.2.2
-numpy>=1.26.4
-requests>=2.32.3
-fpdf2>=2.7.9
-openpyxl>=3.1.5
+streamlit
+pandas
+numpy
+requests
+fpdf2
+openpyxl
